[package]
name = "ie-windows"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Image explorer for windows"
repository = "https://github.com/oovm/ie-windows"
documentation = "https://docs.rs/ie-windows"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
diagnostic-quick = "0.0.0"

[dev-dependencies]

[features]
default = []
