[package]
name = "ie-windows"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Image explorer for windows"
repository = "https://github.com/oovm/ie-windows"
documentation = "https://docs.rs/ie-windows"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
winreg = "0.10.1"

[dependencies.diagnostic-quick]
#version = "0.0.0"
git = "https://github.com/oovm/diagnostic-rs.git"
rev = "eaf110db"
features = ["winreg"]

[dev-dependencies]

[features]
default = []
